--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
     <link rel="stylesheet" href="css/bootstrap.css">
     <!-- 引入css样式表 -->
     <link rel="stylesheet" href="css/index.css">
+    <!-- 引入js文件 -->
+    <script src="js/jQuery.min.js"></script>
+    <script src="js/bootstrap.min.js"></script>
 </head>
 
 <body>
@@ -41,10 +44,47 @@
                 <div class="news clearfix">
                     <ul>
                         <li>
-                            <a href="#">
-                                <img src="images/lg.png" alt="">
-                                <p>阿里百秀</p>
-                            </a>
+                            <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
+                                <!-- Wrapper for slides -->
+                                <div class="carousel-inner" role="listbox">
+                                    <div class="item active">
+                                        <img src="images/banner.dpg" alt="...">
+                                        <div class="carousel-caption">
+                                            阿里百秀1
+                                        </div>
+                                    </div>
+                                    <div class="item">
+                                        <img src="images/banner1.dpg" alt="...">
+                                        <div class="carousel-caption">
+                                            阿里百秀2
+                                        </div>
+                                    </div>
+                                    <div class="item">
+                                        <img src="images/banner2.dpg" alt="...">
+                                        <div class="carousel-caption">
+                                            阿里百秀3
+                                        </div>
+                                    </div>
+                                    <div class="item">
+                                        <img src="images/banner3.dpg" alt="...">
+                                        <div class="carousel-caption">
+                                            阿里百秀4
+                                        </div>
+                                    </div>
+                                </div>
+
+                                <!-- Controls -->
+                                <a class="left carousel-control" href="#carousel-example-generic" role="button"
+                                    data-slide="prev">
+                                    <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+                                    <span class="sr-only">Previous</span>
+                                </a>
+                                <a class="right carousel-control" href="#carousel-example-generic" role="button"
+                                    data-slide="next">
+                                    <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+                                    <span class="sr-only">Next</span>
+                                </a>
+                            </div>
                         </li>
                         <li>
                             <a href="#">
@@ -150,5 +190,10 @@
         </div>
     </div>
 </body>
+<script>
+    $('.carousel').carousel({
+        interval: 2000
+    })
+</script>
 
 </html>
