--- a/index.html
+++ b/index.html
@@ -2,14 +2,14 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>阿里百秀首页</title>
     <!-- 引入Bootstrap -->
-    <link rel="stylesheet" href="css/bootstrap.css">
+    <link rel="stylesheet" href="css/bootstrap.css" />
     <!-- 引入css样式表 -->
-    <link rel="stylesheet" href="css/index.css">
+    <link rel="stylesheet" href="css/index.css" />
     <!-- 引入js文件 -->
     <script src="js/jQuery.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
@@ -17,13 +17,91 @@
 
 <body>
     <div class="container">
+        <!-- 导航条 -->
+        <div class="row">
+            <nav class="navbar navbar-default">
+                <div class="container-fluid">
+                    <!-- Brand and toggle get grouped for better mobile display -->
+                    <div class="navbar-header">
+                        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse"
+                            data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+                            <span class="sr-only">Toggle navigation</span>
+                            <span class="icon-bar"></span>
+                            <span class="icon-bar"></span>
+                            <span class="icon-bar"></span>
+                        </button>
+                        <a class="navbar-brand" href="#">阿里百秀</a>
+                    </div>
+                    <!-- Collect the nav links, forms, and other content for toggling -->
+                    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                        <ul class="nav navbar-nav">
+                            <li class="active">
+                                <a href="#">生活馆 <span class="sr-only">(current)</span></a>
+                            </li>
+                            <li><a href="#">自然汇</a></li>
+                            <li><a href="#">科技潮</a></li>
+                            <li><a href="#">奇趣事</a></li>
+                            <li><a href="#">美食节</a></li>
+                        </ul>
+                        <form class="navbar-form navbar-left">
+                            <div class="form-group">
+                                <input type="text" class="form-control" placeholder="搜索" />
+                            </div>
+                            <button type="submit" class="btn btn-default">搜索</button>
+                        </form>
+                        <ul class="nav navbar-nav navbar-right">
+                            <li><a href="#" data-toggle="modal" data-target=".login">登录</a></li>
+                            <li><a href="#">注册</a></li>
+                        </ul>
+                        <!-- 模态框 -->
+                        <div class="modal fade login" tabindex="-1" role="dialog">
+                            <div class="modal-dialog" role="document">
+                                <div class="modal-content">
+                                    <div class="modal-header">
+                                        <button type="button" class="close" data-dismiss="modal"
+                                            aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                                        <h4 class="modal-title">登录信息</h4>
+                                    </div>
+                                    <div class="modal-body">
+                                        <form>
+                                            <div class="form-group">
+                                                <label for="exampleInputEmail1">邮箱登录地址</label>
+                                                <input type="email" class="form-control" id="exampleInputEmail1"
+                                                    placeholder="Email" />
+                                            </div>
+                                            <div class="form-group">
+                                                <label for="exampleInputPassword1">密码</label>
+                                                <input type="password" class="form-control" id="exampleInputPassword1"
+                                                    placeholder="Password" />
+                                            </div>
+                                            <div class="checkbox">
+                                                <label> <input type="checkbox" /> 记住用户名 </label>
+                                            </div>
+                                        </form>
+                                    </div>
+                                    <div class="modal-footer">
+                                        <button type="button" class="btn btn-default" data-dismiss="modal">关闭</button>
+                                        <button type="button" class="btn btn-primary">登录</button>
+                                    </div>
+                                </div>
+                                <!-- /.modal-content -->
+                            </div>
+                            <!-- /.modal-dialog -->
+                        </div>
+                        <!-- /.modal -->
+                    </div>
+                    <!-- /.navbar-collapse -->
+                </div>
+                <!-- /.container-fluid -->
+            </nav>
+        </div>
         <div class="row">
             <!-- 左侧 -->
             <header class="col-md-2">
                 <div class="logo">
                     <a href="#">
                         <!-- 超小屏下隐藏logo图片 -->
-                        <img src="images/logo.png" alt="" class="hidden-xs">
+                        <img src="images/logo.png" alt="" class="hidden-xs" />
                         <!-- 超小屏下显示span -->
                         <span class="visible-xs">阿里百秀</span>
                     </a>
@@ -48,28 +126,20 @@
                                 <!-- Wrapper for slides -->
                                 <div class="carousel-inner" role="listbox">
                                     <div class="item active">
-                                        <img src="images/banner.dpg" alt="...">
-                                        <div class="carousel-caption">
-                                            阿里百秀1
-                                        </div>
+                                        <img src="images/banner.dpg" alt="..." />
+                                        <div class="carousel-caption">阿里百秀1</div>
                                     </div>
                                     <div class="item">
-                                        <img src="images/banner1.dpg" alt="...">
-                                        <div class="carousel-caption">
-                                            阿里百秀2
-                                        </div>
+                                        <img src="images/banner1.dpg" alt="..." />
+                                        <div class="carousel-caption">阿里百秀2</div>
                                     </div>
                                     <div class="item">
-                                        <img src="images/banner2.dpg" alt="...">
-                                        <div class="carousel-caption">
-                                            阿里百秀3
-                                        </div>
+                                        <img src="images/banner2.dpg" alt="..." />
+                                        <div class="carousel-caption">阿里百秀3</div>
                                     </div>
                                     <div class="item">
-                                        <img src="images/banner3.dpg" alt="...">
-                                        <div class="carousel-caption">
-                                            阿里百秀4
-                                        </div>
+                                        <img src="images/banner3.dpg" alt="..." />
+                                        <div class="carousel-caption">阿里百秀4</div>
                                     </div>
                                 </div>
 
@@ -88,25 +158,25 @@
                         </li>
                         <li>
                             <a href="#">
-                                <img src="images/1.jpg" alt="">
+                                <img src="images/1.jpg" alt="" />
                                 <p>奇了,成都一小区护卫长得像马云,市民纷纷求合影</p>
                             </a>
                         </li>
                         <li>
                             <a href="#">
-                                <img src="images/2.jpg" alt="">
+                                <img src="images/2.jpg" alt="" />
                                 <p>奇了,成都一小区护卫长得像马云,市民纷纷求合影</p>
                             </a>
                         </li>
                         <li>
                             <a href="#">
-                                <img src="images/3.jpg" alt="">
+                                <img src="images/3.jpg" alt="" />
                                 <p>奇了,成都一小区护卫长得像马云,市民纷纷求合影</p>
                             </a>
                         </li>
                         <li>
                             <a href="#">
-                                <img src="images/4.jpg" alt="">
+                                <img src="images/4.jpg" alt="" />
                                 <p>奇了,成都一小区护卫长得像马云,市民纷纷求合影</p>
                             </a>
                         </li>
@@ -123,7 +193,7 @@
                                     营养 / 趣味生活</span></p>
                         </div>
                         <div class="col-sm-3 hidden-xs">
-                            <img src="images/3.jpg" alt="">
+                            <img src="images/3.jpg" alt="" />
                         </div>
                     </div>
                     <div class="row">
@@ -135,7 +205,7 @@
                                     营养 / 趣味生活</span></p>
                         </div>
                         <div class="col-sm-3 hidden-xs">
-                            <img src="images/3.jpg" alt="">
+                            <img src="images/3.jpg" alt="" />
                         </div>
                     </div>
                     <div class="row">
@@ -147,7 +217,7 @@
                                     营养 / 趣味生活</span></p>
                         </div>
                         <div class="col-sm-3 hidden-xs">
-                            <img src="images/3.jpg" alt="">
+                            <img src="images/3.jpg" alt="" />
                         </div>
                     </div>
                     <div class="row">
@@ -159,7 +229,7 @@
                                     营养 / 趣味生活</span></p>
                         </div>
                         <div class="col-sm-3 hidden-xs">
-                            <img src="images/3.jpg" alt="">
+                            <img src="images/3.jpg" alt="" />
                         </div>
                     </div>
                     <div class="row">
@@ -171,7 +241,7 @@
                                     营养 / 趣味生活</span></p>
                         </div>
                         <div class="col-sm-3 hidden-xs">
-                            <img src="images/3.jpg" alt="">
+                            <img src="images/3.jpg" alt="" />
                         </div>
                     </div>
                 </div>
@@ -179,7 +249,7 @@
             <!-- 右侧 -->
             <aside class="col-md-3">
                 <a href="#" class="banner">
-                    <img src="images/zgboke.jpg" alt="">
+                    <img src="images/zgboke.jpg" alt="" />
                 </a>
                 <a href="#" class="hot">
                     <span class="btn btn-primary">热搜</span>
