--- a/index.html
+++ b/index.html
@@ -35,9 +35,7 @@
                     <!-- Collect the nav links, forms, and other content for toggling -->
                     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                         <ul class="nav navbar-nav">
-                            <li class="active">
-                                <a href="#">生活馆 <span class="sr-only">(current)</span></a>
-                            </li>
+                            <li><a href="#">生活馆</a></li>
                             <li><a href="#">自然汇</a></li>
                             <li><a href="#">科技潮</a></li>
                             <li><a href="#">奇趣事</a></li>
